fix(tables): add overflow scroll on tables

--- a/.vuepress/theme/styles/theme.scss
+++ b/.vuepress/theme/styles/theme.scss
@@ -13,6 +13,12 @@
   padding-bottom: 2rem;
 }
 
+table {
+  display: block;
+  overflow-x: auto;
+  overflow-y: hidden;
+}
+
 .navbar .container {
   @include touch {
     padding-left: 0;
